added case study page, header and footer

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -24,6 +24,8 @@
     }
 }
 
+//Perfect 4th type scale https://type-scale.com/
+
 @mixin xl-font-size{
     font-size:4.209rem; 
     line-height:5rem;
