--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -98,6 +98,7 @@ header{
         justify-content: space-between;
         a{
             @include heading-xs;
+            font-family:$primary-font;
             text-transform: lowercase;
             + a{
                 margin-left:$space-large;
@@ -106,89 +107,90 @@ header{
     }
 }
 
-section{
-    &.hero{
-        border-bottom:$blue-border-bottom;         
-        .container{
-            @include half-layout;
-            @include breakpoint(md){
-                & > *:first-child{
-                    text-align: center;
-                }
+/*HERO*/
+section.hero{
+    border-bottom:$blue-border-bottom;         
+    .container{
+        @include half-layout;
+        @include breakpoint(md){
+            & > *:first-child{
+                text-align: center;
             }
         }
-        h1{
-            font-weight:500;
-        }
-        p{
-            @include heading-md;
-            font-family: $primary-font;
-        }
-        .buttons{
-            margin-top:$space-medium;
-            display:flex;
-            justify-content: center;
-            * + *{
-                margin-left:$space-medium;
-            }
-            @include breakpoint(md){
-                justify-content: flex-start;
-            }
-        }
-        .image{
-            display:none;
-            text-align: center;
-            @include breakpoint(md){
-                display:block;
-            }
-            
-        }
-    
     }
-    &.work{
-        border-bottom: $blue-border-bottom;
-        .container > h1{
-            text-align:center;
-            @include heading-lg;
-            font-weight:500;
-            @include breakpoint(md){
-                padding-bottom:$space-large;
-            }
-            
+    h1{
+        font-weight:500;
+    }
+    p{
+        @include heading-md;
+        font-family: $primary-font;
+    }
+    .buttons{
+        margin-top:$space-medium;
+        display:flex;
+        justify-content: center;
+        * + *{
+            margin-left:$space-medium;
         }
-        article{
-            @include half-layout;
-            margin:$space-large 0;
-            h1{
-                @include heading-md;
+        @include breakpoint(md){
+            justify-content: flex-start;
+        }
+    }
+    .image{
+        display:none;
+        text-align: center;
+        @include breakpoint(md){
+            display:block;
+        }
+        
+    }
+}
+
+/*HOMEPAGE*/    
+section.work{
+    border-bottom: $blue-border-bottom;
+    .container > h1{
+        text-align:center;
+        @include heading-lg;
+        font-weight:500;
+        @include breakpoint(md){
+            padding-bottom:$space-large;
+        }
+        
+    }
+    article{
+        @include half-layout;
+        margin:$space-large 0;
+        h1{
+            @include heading-md;
+        }
+        img{
+            border:1px solid $text-color;
+        }
+        .tags{
+            font-weight:500;
+        }
+        .content{
+            * + *{
+                margin-top:$space-small;
             }
-            img{
-                border:1px solid $text-color;
-            }
-            .tags{
-                font-weight:500;
-            }
-            .content{
-                * + *{
-                    margin-top:$space-small;
-                }
-                padding-top:$space-medium;
-                margin-bottom:$space-medium;
-                @include breakpoint(md){
-                    padding-top:0;
-                }
-            }
+            padding-top:$space-medium;
+            margin-bottom:$space-medium;
             @include breakpoint(md){
-                &:nth-of-type(2n){
-                    & > *:first-child{
-                        order:1;
-                    }
+                padding-top:0;
+            }
+        }
+        @include breakpoint(md){
+            &:nth-of-type(2n){
+                & > *:first-child{
+                    order:1;
                 }
             }
         }
     }
 }
 
+/*FOOTER*/
 footer{
     background-image:none;
     @include breakpoint(sm){
@@ -246,3 +248,35 @@ footer{
         }
     }
 }
+
+/*CASE STUDY*/
+.gridImageArea{
+    display:grid;
+    min-height: 500px;
+    height: 70vh;
+    grid-template-rows: 75% 25%;
+    grid-template-columns: 75% 25%;
+    grid-template-areas:
+    "photo photo"
+    "photo mockup";
+
+  .photo {
+    grid-area: photo;
+    background-image: url("../images/safetrips/cover-photo.jpg");
+  }
+  
+  .mockup {
+    grid-area: mockup;
+    background-image: url("../images/safetrips/mobile-airline-info.png");
+  }
+
+  .gridImage{
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        align-items: center;
+        display: flex;
+        position: relative;
+  }
+}
+
