--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,8 @@ img {
   @media (min-width: 768px) {
     .container {
       padding: 4rem 1.5rem; } }
+  .container h1:first-of-type {
+    font-weight: 500; }
 
 .btn {
   background: #CC483E;
@@ -169,8 +171,6 @@ section.hero {
     @media (min-width: 768px) {
       section.hero .container > *:first-child {
         text-align: center; } }
-  section.hero h1 {
-    font-weight: 500; }
   section.hero p {
     font-size: 1.333rem;
     line-height: 1.5rem;
@@ -200,24 +200,66 @@ section.hero {
         display: block; } }
 
 /*HOMEPAGE*/
-section.work {
-  border-bottom: 0.25rem solid #0177BF; }
-  section.work .container > h1 {
-    text-align: center;
-    font-size: 1.777rem;
-    line-height: 2.5rem;
-    font-weight: 500; }
+section.skills .container > h1,
+section.work .container > h1 {
+  text-align: center;
+  font-size: 1.777rem;
+  line-height: 2.5rem; }
+  @media (min-width: 768px) {
+    section.skills .container > h1,
+    section.work .container > h1 {
+      font-size: 2.369rem;
+      line-height: 3rem; } }
+  @media (min-width: 1024px) {
+    section.skills .container > h1,
+    section.work .container > h1 {
+      font-size: 3.157rem;
+      line-height: 4rem; } }
+  @media (min-width: 768px) {
+    section.skills .container > h1,
+    section.work .container > h1 {
+      padding-bottom: 1.5rem; } }
+
+section.skills {
+  background: #0177BF;
+  color: #fff; }
+  section.skills .container {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(4, auto);
+    gap: 2rem; }
+    section.skills .container .skill {
+      display: block; }
     @media (min-width: 768px) {
-      section.work .container > h1 {
+      section.skills .container .skill {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        grid-template-rows: auto;
+        gap: 2rem; } }
+    @media (min-width: 1024px) {
+      section.skills .container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto auto; }
+        section.skills .container h1 {
+          grid-area: 1 / 1 / 1 / 4; }
+        section.skills .container .skill {
+          display: block; } }
+  section.skills h2 {
+    font-size: 1.333rem;
+    line-height: 1.5rem;
+    padding-bottom: 0.5rem;
+    text-align: center; }
+    @media (min-width: 768px) {
+      section.skills h2 {
+        font-size: 1.777rem;
+        line-height: 2.5rem; } }
+    @media (min-width: 1024px) {
+      section.skills h2 {
         font-size: 2.369rem;
         line-height: 3rem; } }
-    @media (min-width: 1024px) {
-      section.work .container > h1 {
-        font-size: 3.157rem;
-        line-height: 4rem; } }
-    @media (min-width: 768px) {
-      section.work .container > h1 {
-        padding-bottom: 1.5rem; } }
+
+section.work {
+  border-bottom: 0.25rem solid #0177BF; }
   section.work article {
     display: flex;
     flex-wrap: wrap;
@@ -292,8 +334,7 @@ footer {
       margin-top: 1.5rem; }
   footer h1 {
     font-size: 1.777rem;
-    line-height: 2.5rem;
-    font-weight: 500; }
+    line-height: 2.5rem; }
     @media (min-width: 768px) {
       footer h1 {
         font-size: 2.369rem;
