--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -62,6 +62,9 @@ img{
     @include breakpoint(md){
         padding:$space-xxlarge $space-large;
     }
+    h1:first-of-type{
+        font-weight:500;
+    }
 }
 
 .btn{
@@ -107,6 +110,7 @@ header{
     }
 }
 
+
 /*HERO*/
 section.hero{
     border-bottom:$blue-border-bottom;         
@@ -117,9 +121,6 @@ section.hero{
                 text-align: center;
             }
         }
-    }
-    h1{
-        font-weight:500;
     }
     p{
         @include heading-md;
@@ -147,17 +148,62 @@ section.hero{
 }
 
 /*HOMEPAGE*/    
+section.skills,
 section.work{
-    border-bottom: $blue-border-bottom;
     .container > h1{
         text-align:center;
         @include heading-lg;
-        font-weight:500;
         @include breakpoint(md){
             padding-bottom:$space-large;
         }
+    }
+}
+
+section.skills{
+    background:$blue;
+    color:$white;
+    
+    .container{
+        display:grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(4, auto);
+        gap: $space-xlarge;
+        .skill{
+            display:block;
+        }
+        @include breakpoint(md){
+            .skill{
+                display:grid;
+                grid-template-columns:1fr 3fr;
+                grid-template-rows:auto;
+                gap: $space-xlarge;
+            }
+        }
+        @include breakpoint(lg){
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: auto auto;
+            h1{
+                grid-area: 1 / 1 / 1 / 4;
+            }
+            .skill{
+                display:block;
+            }
+        }
+        
+        
         
     }
+    h2{
+        @include heading-md;
+        padding-bottom:$space-small;
+        text-align: center;
+    }
+    
+
+}
+
+section.work{
+    border-bottom: $blue-border-bottom;
     article{
         @include half-layout;
         margin:$space-large 0;
@@ -232,7 +278,6 @@ footer{
     }
     h1{
         @include heading-lg;
-        font-weight:500;
     }
     h2{
         @include heading-md;
